# whippet

./: .gitignore  LICENSE  README.md  whippet.cabal  whippet.hs
executable/: Main.hs
test-suite/: WhippetSpec.hs
