name:                whippet
version:             0.1.0.0
synopsis:            Fuzzy file finder
homepage:            https://github.com/tjmw/whippet
license:             MIT
license-file:        LICENSE
author:              Tom Wey
maintainer:          tjmwey@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8,
                       split,
                       regex-compat,
                       filemanip,
                       directory,
                       filepath
  default-language:    Haskell2010
  exposed-modules:     Whippet
  hs-source-dirs:      library

executable whippet
  build-depends:       base >=4.7 && <4.8,
                       whippet
  default-language:    Haskell2010
  hs-source-dirs:      executable
  main-is:             Main.hs

test-suite hspec
  build-depends:    base, whippet, hspec == 2.1.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
